somehow fixed the description overflow problem but not perfect

--- a/src/component/Description/PlanetDescription_modal/PlanetDescription_modal.css
+++ b/src/component/Description/PlanetDescription_modal/PlanetDescription_modal.css
@@ -46,3 +46,15 @@
 .title {
   font-size: large;
 }
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+}
+
+/* Clear floats after the columns */
+.description_box:after {
+  content: "";
+  display: table;
+  clear: both;
+}
